--- a/index.html
+++ b/index.html
@@ -3,96 +3,111 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Delna AI | Smooth Interface</title>
+    <title>Delna AI | Premium Interface</title>
     <style>
         :root {
             --bg-color: #0e1117;
             --sidebar-bg: #17191e;
             --gemini-blue: #4285f4;
             --gemini-purple: #9b72cb;
-            --overlay-bg: rgba(0, 0, 0, 0.5);
+            --overlay-bg: rgba(0, 0, 0, 0.4);
         }
 
         body, html {
             margin: 0; padding: 0;
-            height: 100dvh; /* Dynamic height fix */
+            height: 100dvh;
             background-color: var(--bg-color);
-            color: white; font-family: 'Segoe UI', sans-serif;
+            color: white; font-family: 'Segoe UI', Roboto, sans-serif;
             display: flex; flex-direction: column;
             overflow: hidden;
         }
 
-        /* --- OVERLAY (Sidebar thurakkumpol back-il varunath) --- */
+        /* --- OVERLAY (Background Blur) --- */
         .overlay {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
             background: var(--overlay-bg);
-            backdrop-filter: blur(4px);
+            backdrop-filter: blur(5px);
             opacity: 0; visibility: hidden;
-            transition: 0.3s ease; z-index: 900;
+            transition: 0.4s ease; z-index: 900;
         }
         .overlay.active { opacity: 1; visibility: visible; }
 
-        /* --- SIDEBAR ANIMATION --- */
+        /* --- ADVANCED SIDEBAR ANIMATION --- */
         .sidebar {
             width: 280px; background: var(--sidebar-bg);
             display: flex; flex-direction: column;
-            padding: 20px; border-right: 1px solid rgba(255,255,255,0.05);
+            padding: 25px; border-right: 1px solid rgba(255,255,255,0.05);
             position: fixed; height: 100%; z-index: 1000;
-            transform: translateX(-100%); 
-            transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1);
-            box-shadow: 10px 0 30px rgba(0,0,0,0.5);
+            transform: translateX(-110%); /* Fully hidden */
+            /* Springy bounce effect */
+            transition: transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.15);
+            box-shadow: 15px 0 50px rgba(0,0,0,0.6);
         }
         .sidebar.open { transform: translateX(0); }
 
-        .sidebar-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 25px; }
-        .close-btn { font-size: 24px; cursor: pointer; color: #9aa0a6; padding: 5px; }
-
-        .menu-item { 
-            padding: 12px; margin: 8px 0; border-radius: 12px; 
-            cursor: pointer; color: #bdc1c6; transition: 0.2s;
-            display: flex; align-items: center; gap: 10px;
+        .sidebar-header { 
+            display: flex; justify-content: space-between; align-items: center; 
+            margin-bottom: 30px; opacity: 0; transform: translateY(-10px);
+            transition: 0.4s 0.2s ease forwards;
         }
-        .menu-item:hover { background: rgba(255,255,255,0.08); color: white; }
+        .sidebar.open .sidebar-header { opacity: 1; transform: translateY(0); }
+
+        .close-btn { font-size: 26px; cursor: pointer; color: #9aa0a6; transition: 0.3s; }
+        .close-btn:hover { color: white; transform: rotate(90deg); }
+
+        /* --- STAGGERED MENU ITEMS --- */
+        .menu-item { 
+            padding: 14px; margin: 10px 0; border-radius: 14px; 
+            cursor: pointer; color: #bdc1c6; transition: 0.3s;
+            display: flex; align-items: center; gap: 12px;
+            opacity: 0; transform: translateX(-20px);
+        }
+
+        /* Sidebar thurakkumpol oro item-um pathiye varunnu */
+        .sidebar.open .menu-item:nth-child(2) { transition: 0.4s 0.3s ease forwards; opacity: 1; transform: translateX(0); }
+        .sidebar.open .menu-item:nth-child(3) { transition: 0.4s 0.4s ease forwards; opacity: 1; transform: translateX(0); }
+        .sidebar.open .menu-item:nth-child(4) { transition: 0.4s 0.5s ease forwards; opacity: 1; transform: translateX(0); }
+        .sidebar.open .menu-item:nth-child(5) { transition: 0.4: 0.6s ease forwards; opacity: 1; transform: translateX(0); }
+
+        .menu-item:hover { background: rgba(255,255,255,0.08); color: white; padding-left: 20px; }
 
         /* --- MAIN UI --- */
-        header { padding: 15px 20px; display: flex; align-items: center; background: var(--bg-color); flex-shrink: 0; }
-        .menu-icon { font-size: 24px; cursor: pointer; padding: 5px; }
+        header { padding: 15px 20px; display: flex; align-items: center; flex-shrink: 0; }
+        .menu-icon { font-size: 26px; cursor: pointer; transition: 0.3s; }
+        .menu-icon:hover { opacity: 0.7; }
 
-        #chat-area {
-            flex-grow: 1; display: flex; flex-direction: column;
-            padding: 20px; overflow-y: auto; justify-content: center;
-        }
+        #chat-area { flex-grow: 1; display: flex; flex-direction: column; padding: 20px; overflow-y: auto; justify-content: center; }
+        .chat-row { display: flex; align-items: flex-start; gap: 14px; width: 100%; max-width: 800px; margin: 0 auto; }
 
-        .chat-row { display: flex; align-items: flex-start; gap: 12px; width: 100%; max-width: 800px; margin: 0 auto; }
-
-        /* Side Loading Orbit */
+        /* Side Loading Orbit (The requested style) */
         .ai-avatar {
-            width: 30px; height: 30px; border-radius: 50%;
-            background: rgba(255,255,255,0.1); flex-shrink: 0;
-            position: relative; margin-top: 4px;
+            width: 32px; height: 32px; border-radius: 50%;
+            background: rgba(255,255,255,0.05); flex-shrink: 0;
+            position: relative; margin-top: 4px; border: 1px solid rgba(255,255,255,0.1);
         }
         .thinking .ai-avatar::after {
             content: ''; position: absolute; top: -3px; left: -3px;
             right: -3px; bottom: -3px; border-radius: 50%;
-            border: 2px solid transparent;
-            border-left: 2px solid var(--gemini-blue);
-            border-top: 2px solid var(--gemini-purple);
+            border: 2.5px solid transparent;
+            border-left: 2.5px solid var(--gemini-blue);
+            border-top: 2.5px solid var(--gemini-purple);
             animation: orbit 0.8s linear infinite;
         }
         @keyframes orbit { 100% { transform: rotate(360deg); } }
 
-        #msg-display { font-size: 17px; line-height: 1.6; color: #e8eaed; }
+        #msg-display { font-size: 18px; line-height: 1.6; color: #e8eaed; }
 
         /* --- INPUT BAR --- */
-        .input-container { padding: 10px 15px 40px; display: flex; justify-content: center; flex-shrink: 0; }
+        .input-container { padding: 15px 20px 45px; display: flex; justify-content: center; flex-shrink: 0; }
         .input-pill {
-            width: 100%; max-width: 700px; background: #1e1f20;
-            border-radius: 30px; display: flex; align-items: center;
-            padding: 8px 22px; border: 1px solid transparent; transition: 0.3s;
+            width: 100%; max-width: 720px; background: #1e1f20;
+            border-radius: 32px; display: flex; align-items: center;
+            padding: 10px 24px; border: 1px solid transparent; transition: 0.4s cubic-bezier(0.4, 0, 0.2, 1);
         }
         .input-pill:focus-within {
-            border: 1px solid var(--gemini-blue);
-            box-shadow: 0 0 20px rgba(66, 133, 244, 0.2);
+            border: 1px solid rgba(66, 133, 244, 0.5);
+            box-shadow: 0 0 25px rgba(66, 133, 244, 0.2);
+            background: #232526;
         }
         input { background: none; border: none; color: white; width: 100%; padding: 12px; outline: none; font-size: 16px; }
     </style>
@@ -103,24 +118,25 @@
 
     <div class="sidebar" id="sidebar">
         <div class="sidebar-header">
-            <span style="font-weight: bold; letter-spacing: 1px;">Recent Folders</span>
+            <span style="font-weight: bold; letter-spacing: 1px; color: #9aa0a6;">FOLDERS</span>
             <span class="close-btn" onclick="toggleSidebar()">✕</span>
         </div>
         <div class="menu-item">📂 Security Logs</div>
         <div class="menu-item">📂 Delna AI Core</div>
         <div class="menu-item">📂 System Bypass</div>
-        <div style="margin-top: auto; font-size: 11px; color: #5f6368; padding: 10px;">Delna AI v2.8</div>
+        <div class="menu-item">📂 Recent Chats</div>
+        <div style="margin-top: auto; font-size: 11px; color: #5f6368; padding: 10px; text-align: center;">DELNA AI v3.0</div>
     </div>
 
     <header>
         <div class="menu-icon" onclick="toggleSidebar()">☰</div>
-        <div style="margin-left: 15px; font-size: 14px; letter-spacing: 2px; font-weight: bold;">DELNA AI</div>
+        <div style="margin-left: 18px; font-size: 15px; letter-spacing: 3px; font-weight: bold; color: #e8eaed;">DELNA AI</div>
     </header>
 
     <div id="chat-area">
         <div class="chat-row" id="chatRow">
             <div class="ai-avatar"></div>
-            <div id="msg-display">Hello, Commander. How can I assist you?</div>
+            <div id="msg-display">Hello, Commander. How can I help you today?</div>
         </div>
     </div>
 
@@ -151,7 +167,7 @@
                 chatRow.classList.add('thinking');
 
                 setTimeout(() => {
-                    display.innerText = "Delna AI Analysis complete. All systems optimized.";
+                    display.innerText = "Delna AI Analysis complete. All protocols are active.";
                     chatRow.classList.remove('thinking');
                 }, 1500);
             }
