--- a/index.html
+++ b/index.html
@@ -3,113 +3,115 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Delna AI | Premium Interface</title>
+    <title>Delna AI | Diamond Proctor</title>
     <style>
         :root {
             --bg-color: #0e1117;
-            --sidebar-bg: #17191e;
+            --sidebar-bg: rgba(23, 25, 30, 0.95);
             --gemini-blue: #4285f4;
             --gemini-purple: #9b72cb;
-            --overlay-bg: rgba(0, 0, 0, 0.4);
+            --gemini-cyan: #24c1e0;
         }
 
         body, html {
             margin: 0; padding: 0;
             height: 100dvh;
             background-color: var(--bg-color);
-            color: white; font-family: 'Segoe UI', Roboto, sans-serif;
+            color: white; font-family: 'Google Sans', 'Segoe UI', sans-serif;
             display: flex; flex-direction: column;
             overflow: hidden;
         }
 
-        /* --- OVERLAY (Background Blur) --- */
+        /* --- SMOOTH OVERLAY --- */
         .overlay {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-            background: var(--overlay-bg);
-            backdrop-filter: blur(5px);
+            background: rgba(0, 0, 0, 0.6);
+            backdrop-filter: blur(8px);
             opacity: 0; visibility: hidden;
-            transition: 0.4s ease; z-index: 900;
+            transition: 0.5s cubic-bezier(0.4, 0, 0.2, 1); z-index: 900;
         }
         .overlay.active { opacity: 1; visibility: visible; }
 
-        /* --- ADVANCED SIDEBAR ANIMATION --- */
+        /* --- PREMIUM SIDEBAR --- */
         .sidebar {
-            width: 280px; background: var(--sidebar-bg);
+            width: 300px; background: var(--sidebar-bg);
             display: flex; flex-direction: column;
-            padding: 25px; border-right: 1px solid rgba(255,255,255,0.05);
+            padding: 30px 25px; border-right: 1px solid rgba(255,255,255,0.1);
             position: fixed; height: 100%; z-index: 1000;
-            transform: translateX(-110%); /* Fully hidden */
-            /* Springy bounce effect */
-            transition: transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.15);
-            box-shadow: 15px 0 50px rgba(0,0,0,0.6);
+            transform: translateX(-105%);
+            transition: transform 0.6s cubic-bezier(0.16, 1, 0.3, 1);
+            box-shadow: 20px 0 60px rgba(0,0,0,0.8);
         }
         .sidebar.open { transform: translateX(0); }
 
         .sidebar-header { 
             display: flex; justify-content: space-between; align-items: center; 
-            margin-bottom: 30px; opacity: 0; transform: translateY(-10px);
-            transition: 0.4s 0.2s ease forwards;
+            margin-bottom: 40px; opacity: 0; transform: translateY(-10px);
         }
-        .sidebar.open .sidebar-header { opacity: 1; transform: translateY(0); }
+        .sidebar.open .sidebar-header { opacity: 1; transform: translateY(0); transition: 0.5s 0.2s; }
 
-        .close-btn { font-size: 26px; cursor: pointer; color: #9aa0a6; transition: 0.3s; }
+        .close-btn { font-size: 28px; cursor: pointer; color: #9aa0a6; transition: 0.4s; }
         .close-btn:hover { color: white; transform: rotate(90deg); }
 
-        /* --- STAGGERED MENU ITEMS --- */
+        /* STAGGERED FOLDER LIST */
         .menu-item { 
-            padding: 14px; margin: 10px 0; border-radius: 14px; 
-            cursor: pointer; color: #bdc1c6; transition: 0.3s;
-            display: flex; align-items: center; gap: 12px;
-            opacity: 0; transform: translateX(-20px);
+            padding: 16px; margin: 12px 0; border-radius: 16px; 
+            cursor: pointer; color: #c4c7c5; transition: 0.3s;
+            display: flex; align-items: center; gap: 15px;
+            opacity: 0; transform: translateX(-30px);
+            background: rgba(255, 255, 255, 0.03);
         }
 
-        /* Sidebar thurakkumpol oro item-um pathiye varunnu */
-        .sidebar.open .menu-item:nth-child(2) { transition: 0.4s 0.3s ease forwards; opacity: 1; transform: translateX(0); }
-        .sidebar.open .menu-item:nth-child(3) { transition: 0.4s 0.4s ease forwards; opacity: 1; transform: translateX(0); }
-        .sidebar.open .menu-item:nth-child(4) { transition: 0.4s 0.5s ease forwards; opacity: 1; transform: translateX(0); }
-        .sidebar.open .menu-item:nth-child(5) { transition: 0.4: 0.6s ease forwards; opacity: 1; transform: translateX(0); }
+        /* Smooth Entry for Folders */
+        .sidebar.open .menu-item:nth-child(2) { transition: 0.5s 0.3s ease forwards; opacity: 1; transform: translateX(0); }
+        .sidebar.open .menu-item:nth-child(3) { transition: 0.5s 0.4s ease forwards; opacity: 1; transform: translateX(0); }
+        .sidebar.open .menu-item:nth-child(4) { transition: 0.5s 0.5s ease forwards; opacity: 1; transform: translateX(0); }
+        .sidebar.open .menu-item:nth-child(5) { transition: 0.5s 0.6s ease forwards; opacity: 1; transform: translateX(0); }
 
-        .menu-item:hover { background: rgba(255,255,255,0.08); color: white; padding-left: 20px; }
+        .menu-item:hover { background: rgba(66, 133, 244, 0.1); color: white; transform: scale(1.02); }
 
-        /* --- MAIN UI --- */
-        header { padding: 15px 20px; display: flex; align-items: center; flex-shrink: 0; }
-        .menu-icon { font-size: 26px; cursor: pointer; transition: 0.3s; }
-        .menu-icon:hover { opacity: 0.7; }
+        /* --- CHAT SECTION --- */
+        header { padding: 18px 24px; display: flex; align-items: center; flex-shrink: 0; }
+        .menu-icon { font-size: 28px; cursor: pointer; transition: 0.3s; }
 
-        #chat-area { flex-grow: 1; display: flex; flex-direction: column; padding: 20px; overflow-y: auto; justify-content: center; }
-        .chat-row { display: flex; align-items: flex-start; gap: 14px; width: 100%; max-width: 800px; margin: 0 auto; }
+        #chat-area { flex-grow: 1; display: flex; flex-direction: column; padding: 25px; overflow-y: auto; justify-content: center; }
+        .chat-row { display: flex; align-items: flex-start; gap: 16px; width: 100%; max-width: 800px; margin: 0 auto; }
 
-        /* Side Loading Orbit (The requested style) */
+        /* Tiny Orbit Loader */
         .ai-avatar {
-            width: 32px; height: 32px; border-radius: 50%;
-            background: rgba(255,255,255,0.05); flex-shrink: 0;
-            position: relative; margin-top: 4px; border: 1px solid rgba(255,255,255,0.1);
+            width: 36px; height: 36px; border-radius: 50%;
+            background: rgba(255,255,255,0.08); flex-shrink: 0;
+            position: relative; margin-top: 5px;
+            box-shadow: inset 0 0 10px rgba(255,255,255,0.05);
         }
         .thinking .ai-avatar::after {
-            content: ''; position: absolute; top: -3px; left: -3px;
-            right: -3px; bottom: -3px; border-radius: 50%;
-            border: 2.5px solid transparent;
-            border-left: 2.5px solid var(--gemini-blue);
-            border-top: 2.5px solid var(--gemini-purple);
-            animation: orbit 0.8s linear infinite;
+            content: ''; position: absolute; top: -4px; left: -4px;
+            right: -4px; bottom: -4px; border-radius: 50%;
+            border: 3px solid transparent;
+            border-left: 3px solid var(--gemini-blue);
+            border-top: 3px solid var(--gemini-purple);
+            animation: orbit 1s linear infinite;
+            filter: drop-shadow(0 0 8px var(--gemini-blue));
         }
         @keyframes orbit { 100% { transform: rotate(360deg); } }
 
-        #msg-display { font-size: 18px; line-height: 1.6; color: #e8eaed; }
+        #msg-display { font-size: 19px; line-height: 1.7; color: #e8eaed; font-weight: 300; }
 
-        /* --- INPUT BAR --- */
-        .input-container { padding: 15px 20px 45px; display: flex; justify-content: center; flex-shrink: 0; }
+        /* --- GLOWING INPUT BAR --- */
+        .input-container { padding: 15px 25px 50px; display: flex; justify-content: center; flex-shrink: 0; }
         .input-pill {
-            width: 100%; max-width: 720px; background: #1e1f20;
-            border-radius: 32px; display: flex; align-items: center;
-            padding: 10px 24px; border: 1px solid transparent; transition: 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+            width: 100%; max-width: 750px; background: #1e1f20;
+            border-radius: 35px; display: flex; align-items: center;
+            padding: 12px 28px; border: 1px solid rgba(255,255,255,0.05);
+            transition: 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+            box-shadow: 0 10px 30px rgba(0,0,0,0.5);
         }
         .input-pill:focus-within {
-            border: 1px solid rgba(66, 133, 244, 0.5);
-            box-shadow: 0 0 25px rgba(66, 133, 244, 0.2);
+            border: 1px solid var(--gemini-blue);
+            box-shadow: 0 0 35px rgba(66, 133, 244, 0.35); /* Stronger Diamond Glow */
             background: #232526;
         }
-        input { background: none; border: none; color: white; width: 100%; padding: 12px; outline: none; font-size: 16px; }
+        input { background: none; border: none; color: white; width: 100%; padding: 14px 0; outline: none; font-size: 17px; }
     </style>
 </head>
 <body>
@@ -118,25 +120,25 @@
 
     <div class="sidebar" id="sidebar">
         <div class="sidebar-header">
-            <span style="font-weight: bold; letter-spacing: 1px; color: #9aa0a6;">FOLDERS</span>
+            <span style="font-weight: 600; letter-spacing: 2px; color: #9aa0a6;">FOLDERS</span>
             <span class="close-btn" onclick="toggleSidebar()">✕</span>
         </div>
-        <div class="menu-item">📂 Security Logs</div>
-        <div class="menu-item">📂 Delna AI Core</div>
-        <div class="menu-item">📂 System Bypass</div>
-        <div class="menu-item">📂 Recent Chats</div>
-        <div style="margin-top: auto; font-size: 11px; color: #5f6368; padding: 10px; text-align: center;">DELNA AI v3.0</div>
+        <div class="menu-item">📁 Security Logs</div>
+        <div class="menu-item">🛡️ Diamond Core</div>
+        <div class="menu-item">⚡ System Bypass</div>
+        <div class="menu-item">🕒 Recent Sessions</div>
+        <div style="margin-top: auto; font-size: 12px; color: #5f6368; text-align: center; opacity: 0.5;">DELNA AI DIAMOND v3.5</div>
     </div>
 
     <header>
         <div class="menu-icon" onclick="toggleSidebar()">☰</div>
-        <div style="margin-left: 18px; font-size: 15px; letter-spacing: 3px; font-weight: bold; color: #e8eaed;">DELNA AI</div>
+        <div style="margin-left: 20px; font-size: 16px; letter-spacing: 3px; font-weight: 600; color: #e8eaed; text-transform: uppercase;">Delna AI</div>
     </header>
 
     <div id="chat-area">
         <div class="chat-row" id="chatRow">
             <div class="ai-avatar"></div>
-            <div id="msg-display">Hello, Commander. How can I help you today?</div>
+            <div id="msg-display">Waiting for your command, Commander.</div>
         </div>
     </div>
 
@@ -148,10 +150,8 @@
 
     <script>
         function toggleSidebar() {
-            const sb = document.getElementById('sidebar');
-            const overlay = document.getElementById('overlay');
-            sb.classList.toggle('open');
-            overlay.classList.toggle('active');
+            document.getElementById('sidebar').classList.toggle('open');
+            document.getElementById('overlay').classList.toggle('active');
         }
 
         const input = document.getElementById('userInput');
@@ -167,9 +167,9 @@
                 chatRow.classList.add('thinking');
 
                 setTimeout(() => {
-                    display.innerText = "Delna AI Analysis complete. All protocols are active.";
+                    display.innerText = "Delna AI Analysis complete. Everything is steady.";
                     chatRow.classList.remove('thinking');
-                }, 1500);
+                }, 1600);
             }
         });
     </script>
